Update route selector translation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2094,6 +2094,7 @@ en:
       visit_quantities: Quantities
   routes:
     show:
+      selector: Routes selector
       print: Print
       wait: 'Waiting time:'
       annotating:
