Introduce Rails Peformance monitoring

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -744,6 +744,7 @@ en:
     jobs:
       menu:
         observation: Jobs
+        performance: Performances
     profiles:
       menu:
         profiles: Profiles
