--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -756,6 +756,7 @@ fr:
     jobs:
       menu:
         observation: Jobs
+        performance: Performances
     profiles:
       menu:
         profiles: Profils carto
