Put logo on homepage

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1410,6 +1410,7 @@ en:
       end_date: End date
       with_actions: history of status
   index:
+    motto: Ready to simplify your route planning?
     unsupported_browser:
       unsupported_browser: Unsupported Browser
       unsupported_browser_modern: 'Your browser is too old, please use any recent browser.'
