--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1445,7 +1445,7 @@ fr:
     reverse_geocoding:
       apply: Appliquer la nouvelle adresse
   index:
-    motto: Prêt à simplifier la planification de vos tournées ?
+    motto: Bienvenue ! L'équipe Cartoway est là pour vous accompagner sur chaque tournée.
     unsupported_browser:
       unsupported_browser: Navigateur non pris en charge
       unsupported_browser_modern: >-
