--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1366,7 +1366,7 @@ en:
         string: text
         integer: integer
         float: '0.123'
-        date: 'm%-%d-%Y'
+        date: '%m-%d-%Y'
         date_desc: 'MM/DD/AAAA'
         hour: 'HH:MM'
         second: 'HH:MM:SS'
