--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2699,6 +2699,7 @@ en:
         engine restrictions
       failed: Failed to generate Isochrone
       success: Isochrone generated successfully
+      center_view_help: Center the map on the zone
     index:
       title: Listing sectorisations
       new: New Sectorisation
