--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1403,6 +1403,8 @@ fr:
         visite.
       priority: priorité
       priority_desc: 'priorité d''inclusion lors de l''optimisation, de -4 (min) à 4 (max).'
+      revenue: revenu
+      revenue_desc: revenu généré en effectuant la visite
       comment: commentaire
       comment_desc: informations nécessaires pour la visite.
       phone_number: téléphone
@@ -2457,6 +2459,12 @@ fr:
       contact_email_desc: email du terminal du chauffeur
       phone_number: numéro de téléphone
       phone_number_desc: numéro de téléphone du chauffeur
+      cost_distance: coût kilométrique
+      cost_distance_desc: coût au kilomètre de la tournée du véhicule
+      cost_fixed: coût fixe
+      cost_fixed_desc: coût fixe appliqué si le véhicule est utilisé pour une tournée
+      cost_time: coût horaire
+      cost_time_desc: coût horaire de la tournée du véhicule
       emission: émission
       emission_desc: émission du véhicule
       consumption: consommation
@@ -3059,6 +3067,9 @@ fr:
         remember_me: Se souvenir de moi
   vehicle_stores:
     import_file:
+      cost_distance: coût kilométrique
+      cost_fixed: coût fixe
+      cost_time: coût horaire
       emission: émission
       consumption: consommation
       capacity: capacité
