--- a/config/locales/en.devices.yml
+++ b/config/locales/en.devices.yml
@@ -295,6 +295,11 @@ en:
         access: Access the tour
         transmit: Transmit to driver
         action: Send to driver
+        send_sms: Send SMS to driver
+        success: Sent to driver successfully
+        fail: Failed to send
+      deliver_sends:
+        send_sms: Send SMS to drivers
         success: Sent to driver successfully
         fail: Failed to send
       deliver_clear:
