--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1826,6 +1826,8 @@ en:
       distance_help: Total distance
       emission_help: Total emission
       cost_help: Route costs
+      balance_help: Cost Balance
+      revenue_help: Revenues
       total_cost_help: Total cost
       driving_time_help: Total driving time
       visit_duration_help: Total visits duration
