--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2961,3 +2961,5 @@ en:
       speed_multiplicator: speed multiplicator
       speed_multiplier: speed multiplier
       many_usage_sets: Many vehicle configurations present
+  errors:
+    sync_failed: "Synchronization failed"
