--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -3098,3 +3098,5 @@ fr:
       speed_multiplicator: coef vitesse (déprécié)
       speed_multiplier: coef vitesse
       many_usage_sets: Plusieurs configurations de véhicules présentes
+  errors:
+    sync_failed: "La synchronisation a échoué"
