--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -2170,10 +2170,11 @@ pt:
       success: Utilizador atualizado com sucesso
   vehicles:
     default_name: 'Veículo %{n}'
-    emissions_nothing: 'Nenhum - %{n}'
-    emissions_light_petrol: 'Ligeiro - Gasolina - %{n}'
-    emissions_light_diesel: 'Ligeiro - Gasóleo - %{n}'
-    emissions_light_lgp: 'Ligeiro - GPL - %{n}'
+    emissions:
+      nothing: "Nenhum - %{n}"
+      light_petrol: "Ligeiro - Gasolina - %{n}"
+      light_diesel: "Ligeiro - Gasóleo - %{n}"
+      light_lgp: "Ligeiro - GPL - %{n}"
     import:
       ref_vehicle: referência veículo
       ref_desc: referência do veículo
